--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# frontend
+/frontend/node_modules/
+/frontend/dist/
+/frontend/.angular/
