--- a/device-service/appsettings.json
+++ b/device-service/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=iot_registry;Username=postgres;Password=admin"
+  },
+  "Jwt": {
+    "Key": "jakotajnikljuc123_evorandomslova:94yf57893yn78g5ng7eydy",
+    "Issuer": "iot-registry-api",
+    "Audience": "iot-registry-frontend",
+    "ExpiresInMinutes": 60
   }
 }
