Added environment variable for both local and container frontend.

--- a/device-service/appsettings.json
+++ b/device-service/appsettings.json
@@ -14,5 +14,9 @@
     "Issuer": "iot-registry-api",
     "Audience": "iot-registry-frontend",
     "ExpiresInMinutes": 60
-  }
+  },
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "http://frontend"
+  ]
 }
