Added production appsettings files.

--- a/device-service/appsettings.json
+++ b/device-service/appsettings.json
@@ -18,5 +18,6 @@
   "AllowedOrigins": [
     "http://localhost:4200",
     "http://frontend"
-  ]
+  ],
+  "EventServiceUrl": "http://localhost:5282/"
 }
