--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -5,17 +5,17 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Serve static files directly
+    # Serve Angular routes properly
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    # Optional: gzip compression for better performance
+    # Optional: gzip for better performance
     gzip on;
     gzip_types text/plain application/javascript text/css application/json image/svg+xml;
     gzip_min_length 256;
 
-    # Optional: caching for static assets
+    # Cache static assets
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
         expires 6M;
         access_log off;
