Modified everything so Docker containers work. Separated appsettings connection strings for dev and prod. Removed hardcoded connection string in db context classes. Modified frontend environment routes and endpoint calls so that they work in dev and prod. Fixed default.conf. Added connection string for prod in compose file just in case.

--- a/location-service/Dockerfile
+++ b/location-service/Dockerfile
@@ -11,4 +11,5 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/out .
 EXPOSE 8080
+COPY appsettings.Production.json ./
 ENTRYPOINT ["dotnet", "location-service.dll"]
