--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - user-db
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+      - ConnectionStrings__DefaultConnection=Host=user-db;Port=5432;Database=iot_registry;Username=postgres;Password=admin
     ports:
       - "5004:8080"
 
@@ -37,6 +38,7 @@ services:
       - device-db
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+      - ConnectionStrings__DefaultConnection=Host=device-db;Port=5432;Database=iot_registry;Username=postgres;Password=admin
     ports:
       - "5001:8080"
 
@@ -56,6 +58,7 @@ services:
       - event-db
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+      - ConnectionStrings__DefaultConnection=Host=event-db;Port=5432;Database=iot_registry;Username=postgres;Password=admin
     ports:
       - "5002:8080"
 
@@ -75,6 +78,7 @@ services:
       - location-db
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+      - ConnectionStrings__DefaultConnection=Host=location-db;Port=5432;Database=iot_registry;Username=postgres;Password=admin
     ports:
       - "5003:8080"
 
