--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -10,6 +10,42 @@ server {
         try_files $uri /index.html;
     }
 
+    location /api/user {
+        proxy_pass http://user-service:8080/api/user;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /api/device {
+        proxy_pass http://device-service:8080/api/device;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /api/location {
+        proxy_pass http://location-service:8080/api/location;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /api/event {
+        proxy_pass http://event-service:8080/api/event;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Optional: gzip for better performance
     gzip on;
     gzip_types text/plain application/javascript text/css application/json image/svg+xml;
