--- a/EventServiceTest/EventServiceTest.csproj
+++ b/EventServiceTest/EventServiceTest.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\event-service\event-service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
