--- a/statistic-service/appsettings.json
+++ b/statistic-service/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "jakotajnikljuc123_evorandomslova:94yf57893yn78g5ng7eydy",
+    "Issuer": "iot-registry-api",
+    "Audience": "iot-registry-frontend",
+    "ExpiresInMinutes": 60
+  },
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "http://frontend"
+  ]
 }
