Created Data fetching service for getting data from other services.

--- a/statistic-service/appsettings.Development.json
+++ b/statistic-service/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "EventServiceUrl": "http://localhost:5282/",
+  "LocationServiceUrl": "http://localhost:5261/",
+  "DeviceServiceUrl": "http://localhost:5208/"
 }
