--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -46,6 +46,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    location /api/statistic {
+        proxy_pass http://statistic-service:8080/api/statistic;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Optional: gzip for better performance
     gzip on;
     gzip_types text/plain application/javascript text/css application/json image/svg+xml;
