Configured env for simulation endpoint and created empty component.

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -46,6 +46,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    location /api/simulation {
+        proxy_pass http://event-service:8080/api/simulation;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location /api/statistic {
         proxy_pass http://statistic-service:8080/api/statistic;
         proxy_http_version 1.1;
